--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.LauncherActivity">
             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -27,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.SignInActivity" />
-        <activity android:name=".ui.activity.RegistrationActivity"></activity>
+        <activity android:name=".ui.activity.OnboardingActivity"></activity>
     </application>
 
 </manifest>
