--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
     // asynch libreary
     implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.google.android.material:material:1.0.0'
 
 }
 repositories {
