--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.activity.NavigationActivity"></activity>
+        <activity
+            android:name=".ui.activity.WelcomeActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".ui.activity.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -28,7 +32,7 @@
         </activity>
         <activity android:name=".ui.activity.SignInActivity" />
         <activity android:name=".ui.activity.OnboardingActivity" />
-        <activity android:name=".ui.activity.LocationActivity"></activity>
+        <activity android:name=".ui.activity.LocationActivity" />
     </application>
 
 </manifest>
