--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     // For the retrofit
+    compile 'com.android.support:design:28.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
@@ -64,6 +65,11 @@ dependencies {
     // asynch libreary
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.google.android.material:material:1.0.0'
+
+    // Exo player
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.10.4'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.4'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.4'
 
 }
 repositories {
