--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -33,6 +35,9 @@
         <activity android:name=".ui.activity.SignInActivity" />
         <activity android:name=".ui.activity.OnboardingActivity" />
         <activity android:name=".ui.activity.LocationActivity" />
+        <service android:name=".services.MyIntentService"/>
+        <service android:name=".services.MyService">
+        </service>
     </application>
 
 </manifest>
