--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.4'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.4'
 
+    // For Pager Indicator
+    implementation 'com.romandanylyk:pageindicatorview:1.0.0@aar'
 }
 repositories {
     mavenCentral()
