--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,12 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.NavigationActivity"></activity>
+        <activity android:name=".ui.activity.FriendsActivity"></activity>
+        <activity android:name=".ui.activity.NavigationActivity" />
         <activity
             android:name=".ui.activity.WelcomeActivity"
             android:screenOrientation="portrait" />
@@ -41,8 +42,9 @@
         <activity android:name=".ui.activity.SignInActivity" />
         <activity android:name=".ui.activity.OnboardingActivity" />
         <activity android:name=".ui.activity.LocationActivity" />
-        <service android:name=".services.MyIntentService"/>
-        <service android:name=".services.MyService"/>
+
+        <service android:name=".services.MyIntentService" />
+        <service android:name=".services.MyService" />
     </application>
 
 </manifest>
